--- a/index.ipynb
+++ b/index.ipynb
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "256e37d3-e470-42c6-bcf0-80e7b058ec70",
    "metadata": {},
    "outputs": [
@@ -1128,7 +1128,49 @@
       "Epoch 17/30\n",
       "113/113 [==============================] - 5s 45ms/step - loss: 0.7617 - accuracy: 0.7064 - val_loss: 0.7301 - val_accuracy: 0.7188\n",
       "Epoch 18/30\n",
-      " 95/113 [========================>.....] - ETA: 0s - loss: 0.7466 - accuracy: 0.7102"
+      "113/113 [==============================] - 5s 46ms/step - loss: 0.7441 - accuracy: 0.7108 - val_loss: 0.7156 - val_accuracy: 0.7196\n",
+      "Epoch 19/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.7315 - accuracy: 0.7172 - val_loss: 0.7026 - val_accuracy: 0.7242\n",
+      "Epoch 20/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.7198 - accuracy: 0.7217 - val_loss: 0.6911 - val_accuracy: 0.7275\n",
+      "Epoch 21/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.7107 - accuracy: 0.7181 - val_loss: 0.6807 - val_accuracy: 0.7275\n",
+      "Epoch 22/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6963 - accuracy: 0.7197 - val_loss: 0.6711 - val_accuracy: 0.7292\n",
+      "Epoch 23/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6882 - accuracy: 0.7197 - val_loss: 0.6626 - val_accuracy: 0.7300\n",
+      "Epoch 24/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6791 - accuracy: 0.7281 - val_loss: 0.6539 - val_accuracy: 0.7312\n",
+      "Epoch 25/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6710 - accuracy: 0.7244 - val_loss: 0.6468 - val_accuracy: 0.7325\n",
+      "Epoch 26/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6680 - accuracy: 0.7272 - val_loss: 0.6402 - val_accuracy: 0.7354\n",
+      "Epoch 27/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6628 - accuracy: 0.7236 - val_loss: 0.6348 - val_accuracy: 0.7333\n",
+      "Epoch 28/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6534 - accuracy: 0.7214 - val_loss: 0.6290 - val_accuracy: 0.7354\n",
+      "Epoch 29/30\n",
+      "113/113 [==============================] - 5s 43ms/step - loss: 0.6412 - accuracy: 0.7367 - val_loss: 0.6242 - val_accuracy: 0.7346\n",
+      "Epoch 30/30\n",
+      "113/113 [==============================] - 5s 45ms/step - loss: 0.6410 - accuracy: 0.7300 - val_loss: 0.6180 - val_accuracy: 0.7375\n",
+      "75/75 [==============================] - 1s 12ms/step - loss: 0.6180 - accuracy: 0.7375\n",
+      "Test Loss: 0.6180\n",
+      "Test Accuracy: 0.7375\n",
+      "New model created and saved successfully.\n",
+      "Training history saved successfully.\n",
+      "75/75 [==============================] - 1s 17ms/step\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'History' object has no attribute 'get'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[15], line 57\u001b[0m\n\u001b[0;32m     55\u001b[0m     pickle\u001b[38;5;241m.\u001b[39mdump(history\u001b[38;5;241m.\u001b[39mhistory, file)  \u001b[38;5;66;03m# Save history.history\u001b[39;00m\n\u001b[0;32m     56\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mTraining history saved successfully.\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m---> 57\u001b[0m \u001b[43mmetrics\u001b[49m\u001b[43m(\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mX_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43my_test\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mlabel_encoder\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mhistory\u001b[49m\u001b[43m)\u001b[49m\n",
+      "Cell \u001b[1;32mIn[8], line 7\u001b[0m, in \u001b[0;36mmetrics\u001b[1;34m(model, X_test, y_test, label_encoder, history_dict)\u001b[0m\n\u001b[0;32m      4\u001b[0m y_pred_classes \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39margmax(y_pred_proba, axis\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m1\u001b[39m)  \u001b[38;5;66;03m# Convert probabilities to class labels\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;66;03m# Plot loss values over epochs\u001b[39;00m\n\u001b[1;32m----> 7\u001b[0m train_loss \u001b[38;5;241m=\u001b[39m \u001b[43mhistory_dict\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget\u001b[49m(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mloss\u001b[39m\u001b[38;5;124m'\u001b[39m, [])\n\u001b[0;32m      8\u001b[0m val_loss \u001b[38;5;241m=\u001b[39m history_dict\u001b[38;5;241m.\u001b[39mget(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mval_loss\u001b[39m\u001b[38;5;124m'\u001b[39m, [])  \u001b[38;5;66;03m# Validation loss might not be available\u001b[39;00m\n\u001b[0;32m     10\u001b[0m plt\u001b[38;5;241m.\u001b[39mfigure(figsize\u001b[38;5;241m=\u001b[39m(\u001b[38;5;241m10\u001b[39m, \u001b[38;5;241m6\u001b[39m))\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'History' object has no attribute 'get'"
      ]
     }
    ],
