--- a/index.ipynb
+++ b/index.ipynb
@@ -39,14 +39,7 @@
     "\n",
     "- **Image Classification**: Accurately classify X-ray images into the correct category (COVID-19, Pneumonia, or Normal).\n",
     "- **Model Optimization**: Implement techniques such as early stopping, data augmentation, and learning rate adjustments to optimize the model's performance.\n",
-    "- **Evaluation**: Assess the model's performance using various metrics such as accuracy, loss, and confusion matrix.\n",
-    "\n",
-    "## Tools and Libraries\n",
-    "\n",
-    "- **TensorFlow/Keras**: For building and training the CNN model.\n",
-    "- **ImageDataGenerator**: For data augmentation.\n",
-    "- **Matplotlib/Seaborn**: For visualizing the model's performance.\n",
-    "- **Scikit-learn**: For additional evaluation metrics and model validation."
+    "- **Evaluation**: Assess the model's performance using various metrics such as accuracy, loss, and confusion matrix.\n"
    ]
   },
   {
@@ -1172,7 +1165,10 @@
    "id": "1de2fcd4-fd39-41ba-9c80-8c37b5261877",
    "metadata": {},
    "source": [
-    "# CNN"
+    "# CNN\n",
+    "- 3 Conv2D layers, 3 Dense layers\n",
+    "- Kernel sizes range from 3x3, and 2x2 to focus on very fine details\n",
+    "- Final dropout rate of 0.3, becuase larger dropouts resulted in lower accuracy scores"
    ]
   },
   {
@@ -1354,7 +1350,9 @@
    "id": "2a2e5ae7-d98f-482b-b127-61350412168b",
    "metadata": {},
    "source": [
-    "# Sequential CNN + DataGen"
+    "# Sequential CNN + DataGen\n",
+    "- Included a DataGen which slightly distorts the images before feeding to the neural network, which makes the model more generalized\n",
+    "- Same CNN structure as before"
    ]
   },
   {
@@ -1541,7 +1539,8 @@
    "id": "3f0c250e-3985-438a-b045-39e644cecfa5",
    "metadata": {},
    "source": [
-    "# Sequential CNN + DataGen + Optimal"
+    "# Sequential CNN + DataGen + Optimal\n",
+    "-Same as the previous model, but with slightly different layers"
    ]
   },
   {
@@ -1761,7 +1760,10 @@
    "id": "96783370-ee44-46bf-b86b-158d8a82c623",
    "metadata": {},
    "source": [
-    "# CNN + L2"
+    "# CNN + L2\n",
+    "- Still using the same DataGen parameters, but this time with L2 penalty for colinearity.\n",
+    "- This did not increase the accuracy of the model, however the loss and accuracy progression is very smooth\n",
+    "- If left to run it seems like it will never converge to a better score than the previous model"
    ]
   },
   {
@@ -1963,6 +1965,82 @@
     "    print(\"Training history saved successfully.\")\n",
     "    metrics(model, X_test, y_test, label_encoder, history.history, model_name=\"CNN_Datagen_Optimal2\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "010d44e5-f8dd-48c0-a82b-784be4efffd2",
+   "metadata": {},
+   "source": [
+    "# Model Explanation\n",
+    "\n",
+    "In this project, I created and analyzed four different neural network models to classify lung X-ray images into three categories: COVID, pneumonia, and normal. Each model was designed with specific configurations to evaluate their performance and robustness. The models include:\n",
+    "\n",
+    "1. **Baseline Sequential Model**\n",
+    "2. **Sequential Model with ReduceLROnPlateau**\n",
+    "3. **CNN**\n",
+    "4. **CNN + Data Augmentation**\n",
+    "5. **CNN + L2 Regularization**\n",
+    "\n",
+    "# Model Overview\n",
+    "\n",
+    "### 1. **Baseline Sequential Model**\n",
+    "   - **Architecture:** A simple sequential model with convolutional, max-pooling, and dense layers.\n",
+    "   - **Purpose:** Served as the control model to compare against other models with additional techniques.\n",
+    "   - **Accuracy:** 0.76\n",
+    "\n",
+    "### 2. **Sequential Model with ReduceLROnPlateau**\n",
+    "   - **Architecture:** Similar to the baseline model but incorporated the `ReduceLROnPlateau` callback.\n",
+    "   - **Purpose:** The callback adjusts the learning rate when a plateau in model performance is detected, which helps in optimizing the training process.\n",
+    "   - **Accuracy:** 0.81\n",
+    "\n",
+    "### 3. **CNN**\n",
+    "   - **Architecture:** A more complex CNN with additional convolutional and max-pooling layers, designed to capture more detailed features from the images.\n",
+    "   - **Purpose:** To build a stronger model capable of extracting more complex features from the X-ray images.\n",
+    "   - **Accuracy:** 0.82\n",
+    "\n",
+    "### 4. **CNN + Data Augmentation**\n",
+    "   - **Architecture:** Similar to the CNN model but with data augmentation techniques applied during training.\n",
+    "   - **Purpose:** To prevent overfitting and improve the model's generalization to unseen data by artificially expanding the dataset through transformations such as rotation, zoom, and flipping.\n",
+    "   - **Accuracy:** 0.86\n",
+    "\n",
+    "### 5. **CNN + L2 Regularization**\n",
+    "   - **Architecture:** A CNN model with L2 regularization applied to the dense layers.\n",
+    "   - **Purpose:** To prevent overfitting by penalizing large weights during training, encouraging the model to maintain simpler and more generalizable patterns.\n",
+    "   - **Accuracy:** 0.83\n",
+    "\n",
+    "# Recommendations\n",
+    "\n",
+    "### For Lung X-Ray Classification Tasks:\n",
+    "- **Use the CNN + Data Augmentation Model:** This model demonstrated the highest accuracy and is the recommended choice for classifying lung X-ray images into COVID, pneumonia, and normal categories.\n",
+    "\n",
+    "# Conclusion\n",
+    "\n",
+    "The models tested in this project offer various strengths for lung X-ray classification, with the CNN + Data Augmentation model standing out as the most accurate. This model has the potential to significantly benefit the healthcare industry by enabling faster and more accurate diagnoses. The deployment of such models can serve as an additional diagnostic support tool for medical professionals, helping to identify lung diseases more quickly and accurately. This can lead to earlier interventions, improved patient outcomes, and more efficient use of healthcare resources.\n",
+    "\n",
+    "\n",
+    "# Next Steps\n",
+    "\n",
+    "### 1. **Increase Dataset Size**\n",
+    "   - Expand the dataset to include more images, particularly for underrepresented categories, to improve model robustness and generalizability.\n",
+    "\n",
+    "### 2. **Ensure Dataset Balance**\n",
+    "   - Obtain a more balanced dataset with equal representation of all classes to improve classification accuracy and fairness.\n",
+    "\n",
+    "### 3. **Enhance Preprocessing and Feature Engineering**\n",
+    "   - Investigate advanced preprocessing techniques, such as contrast enhancement and noise reduction, to improve the model's ability to capture relevant features.\n",
+    "\n",
+    "### 4. **Use Pre-trained Models**\n",
+    "   - Some available models for this dataset can reach scores of up to 91%. These models however require 3 chanel color format to operate, and this project uses greyscale to run more efficiently. \n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c1e0e985-5858-4788-85fc-9757c0c73603",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
