--- a/index.ipynb
+++ b/index.ipynb
@@ -2043,6 +2043,13 @@
     "   - **Purpose:** To build a stronger model capable of extracting more complex features from the X-ray images.\n",
     "   - **Accuracy:** 0.82\n",
     "\n",
+    "The CNN model with data augmentation performed the best, achieving a test accuracy of 86%. The model's similar F1 scores and smooth convergence of loss values indicate that there is no overfitting present. Among the different classifications, viral pneumonia was the easiest to identify, with the best classification rate of 97%. This model used MaxPooling layers which were set to 3x3 pixels. These small grids were able to scan through each image, and identify features in a 2D manner, rather than the 1D method for the baseline model. This added more complex layers to the model, which greatly aided in the accuracy. Additional information for how MaxPooling can be utilized in machine learning algorithms can be found below:\n",
+    "\n",
+    "\n",
+    "Gholamalinezhad, H., & Khosravi, H. (2020). Pooling methods in deep neural networks, a review. https://www.semanticscholar.org/paper/Pooling-Methods-in-Deep-Neural-Networks%2C-a-Review-Gholamalinezhad-Khosravi/8f66ed7f0e2089b4f5219c782687bea368c7f4ee\n",
+    "\n",
+    "Full pdf version: https://arxiv.org/pdf/2009.07485\n",
+    "\n",
     "### 4. **CNN + Data Augmentation**\n",
     "   - **Architecture:** Similar to the CNN model but with data augmentation techniques applied during training.\n",
     "   - **Purpose:** To prevent overfitting and improve the model's generalization to unseen data by artificially expanding the dataset through transformations such as rotation, zoom, and flipping.\n",
