--- a/index.ipynb
+++ b/index.ipynb
@@ -1187,9 +1187,7 @@
     "#### **Dropout Rate:**\n",
     "- **Dropout Implementation:** The model incorporates a dropout rate of 0.3 in the final dropout layer.\n",
     "  - **Reasoning:** Dropout helps prevent overfitting by randomly setting a fraction of the input units to zero during training, improving the model's generalization. \n",
-    "  - **Final Dropout Rate:** A dropout rate of 0.3 was selected after finding that higher dropout rates led to lower accuracy scores. Larger dropout rates excessively removed information, impairing the model’s learning ability. The 0.3 rate strikes a balance between regularization and retaining sufficient information for effective learning.\n",
-    "\n",
-    "This architecture and configuration are designed to ensure that the model effectively learns from detailed image features while balancing between preventing overfitting and maintaining performance.\n"
+    "  - **Final Dropout Rate:** A dropout rate of 0.3 was selected after finding that higher dropout rates led to lower accuracy scores. Larger dropout rates excessively removed information, impairing the model’s learning ability. The 0.3 rate strikes a balance between regularization and retaining sufficient information for effective learning.\n"
    ]
   },
   {
@@ -1489,7 +1487,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.preprocessing.image import ImageDataGenerator\n",
+    "\n",
     "\n",
     "if use_saved_model:\n",
     "    try:\n",
@@ -2043,8 +2041,8 @@
     "   - **Purpose:** To build a stronger model capable of extracting more complex features from the X-ray images.\n",
     "   - **Accuracy:** 0.82\n",
     "\n",
-    "The CNN model with data augmentation performed the best, achieving a test accuracy of 86%. The model's similar F1 scores and smooth convergence of loss values indicate that there is no overfitting present. Among the different classifications, viral pneumonia was the easiest to identify, with the best classification rate of 97%. This model used MaxPooling layers which were set to 3x3 pixels. These small grids were able to scan through each image, and identify features in a 2D manner, rather than the 1D method for the baseline model. This added more complex layers to the model, which greatly aided in the accuracy. Additional information for how MaxPooling can be utilized in machine learning algorithms can be found below:\n",
     "\n",
+    "The CNN model with data augmentation performed the best, achieving a test accuracy of 86%. The model's similar F1 scores and smooth convergence of loss values indicate that there is no overfitting present. Among the different classifications, viral pneumonia was the easiest to identify, with the best classification rate of 97%. This model used MaxPooling, and Conv2D layers which were set to 3x3 pixels. These small grids were able to scan through each image, and identify features in a 2D manner, rather than the 1D method for the baseline model. This added more complex layers to the model, which greatly aided in the accuracy. Additional information for how MaxPooling and Conv2D can be utilized in machine learning algorithms can be found below:\n",
     "\n",
     "Gholamalinezhad, H., & Khosravi, H. (2020). Pooling methods in deep neural networks, a review. https://www.semanticscholar.org/paper/Pooling-Methods-in-Deep-Neural-Networks%2C-a-Review-Gholamalinezhad-Khosravi/8f66ed7f0e2089b4f5219c782687bea368c7f4ee\n",
     "\n",
@@ -2085,6 +2083,14 @@
     "   - Some available models for this dataset can reach scores of up to 91%. These models however require 3 chanel color format to operate, and this project uses greyscale to run more efficiently. \n",
     "\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c19092b5-c181-4931-adcf-adc80f949304",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
