--- a/index.ipynb
+++ b/index.ipynb
@@ -2016,7 +2016,7 @@
    "source": [
     "# Model Explanation\n",
     "\n",
-    "In this project, I created and analyzed four different neural network models to classify lung X-ray images into three categories: COVID, pneumonia, and normal. Each model was designed with specific configurations to evaluate their performance and robustness. The models include:\n",
+    "In this project, I created and analyzed five different neural network models to classify lung X-ray images into three categories: COVID, pneumonia, and normal. Each model was designed with specific configurations to evaluate their performance and robustness. The models include:\n",
     "\n",
     "1. **Baseline Sequential Model**\n",
     "2. **Sequential Model with ReduceLROnPlateau**\n",
@@ -2041,13 +2041,6 @@
     "   - **Purpose:** To build a stronger model capable of extracting more complex features from the X-ray images.\n",
     "   - **Accuracy:** 0.82\n",
     "\n",
-    "\n",
-    "The CNN model with data augmentation performed the best, achieving a test accuracy of 86%. The model's similar F1 scores and smooth convergence of loss values indicate that there is no overfitting present. Among the different classifications, viral pneumonia was the easiest to identify, with the best classification rate of 97%. This model used MaxPooling, and Conv2D layers which were set to 3x3 pixels. These small grids were able to scan through each image, and identify features in a 2D manner, rather than the 1D method for the baseline model. This added more complex layers to the model, which greatly aided in the accuracy. Additional information for how MaxPooling and Conv2D can be utilized in machine learning algorithms can be found below:\n",
-    "\n",
-    "Gholamalinezhad, H., & Khosravi, H. (2020). Pooling methods in deep neural networks, a review. https://www.semanticscholar.org/paper/Pooling-Methods-in-Deep-Neural-Networks%2C-a-Review-Gholamalinezhad-Khosravi/8f66ed7f0e2089b4f5219c782687bea368c7f4ee\n",
-    "\n",
-    "Full pdf version: https://arxiv.org/pdf/2009.07485\n",
-    "\n",
     "### 4. **CNN + Data Augmentation**\n",
     "   - **Architecture:** Similar to the CNN model but with data augmentation techniques applied during training.\n",
     "   - **Purpose:** To prevent overfitting and improve the model's generalization to unseen data by artificially expanding the dataset through transformations such as rotation, zoom, and flipping.\n",
@@ -2057,6 +2050,14 @@
     "   - **Architecture:** A CNN model with L2 regularization applied to the dense layers.\n",
     "   - **Purpose:** To prevent overfitting by penalizing large weights during training, encouraging the model to maintain simpler and more generalizable patterns.\n",
     "   - **Accuracy:** 0.83\n",
+    "\n",
+    "\n",
+    "The CNN model with data augmentation performed the best, achieving a test accuracy of 86%. The model's similar F1 scores and smooth convergence of loss values indicate that there is no overfitting present. Among the different classifications, viral pneumonia was the easiest to identify, with the best classification rate of 97%. This model used MaxPooling, and Conv2D layers which were set to 3x3 pixels. These small grids were able to scan through each image, and identify features in a 2D manner, rather than the 1D method for the baseline model. This added more complex layers to the model, which greatly aided in the accuracy. Additional information for how MaxPooling and Conv2D can be utilized in machine learning algorithms can be found below:\n",
+    "\n",
+    "Gholamalinezhad, H., & Khosravi, H. (2020). Pooling methods in deep neural networks, a review. https://www.semanticscholar.org/paper/Pooling-Methods-in-Deep-Neural-Networks%2C-a-Review-Gholamalinezhad-Khosravi/8f66ed7f0e2089b4f5219c782687bea368c7f4ee\n",
+    "\n",
+    "Full pdf version: https://arxiv.org/pdf/2009.07485\n",
+    "\n",
     "\n",
     "# Recommendations\n",
     "\n",
@@ -2087,7 +2088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c19092b5-c181-4931-adcf-adc80f949304",
+   "id": "a276c74b-213d-40e8-82dc-42607e49ce97",
    "metadata": {},
    "outputs": [],
    "source": []
